k8s/traefik-internal/1-service.yaml
---
# Source: traefik/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik-internal
  labels:
    app.kubernetes.io/name: traefik-internal
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: traefik-internal-traefik-spiffe@kubernetescrd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik-internal
    app.kubernetes.io/instance: traefik-internal
  ports:
  - port: 8443
    name: https
    targetPort: https
    protocol: TCP
